--- a/web/index.html
+++ b/web/index.html
@@ -11,8 +11,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="sama">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  <link rel="icon" type="image/png" href="favicon.png" />
-  <title>sama</title>
+  <link rel="icon" type="image/png" href="sama_logo.png" />
+  <title>SAMA</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
